--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,19 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
-    "bootstrap-icons": "^1.10.5",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
-    "react-vertical-timeline-component": "^3.6.0",
-    "toastify-js": "^1.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^8.0.1"
+  },
+  "overrides": {
+    "nth-check": "2.1.1"
   }
 }
