--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4",
-    "proxy": "https://spring-boot-contactme.onrender.com/api/send-email"
+    "proxy": "http://localhost:8080/"
   },
   "scripts": {
     "predeploy": "npm run build",
