--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-scroll": "^1.8.9",
     "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4",
-    "proxy": "http://localhost:8080/"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
